--- a/package.json
+++ b/package.json
@@ -7,38 +7,62 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/vector-icons": "^10.0.6",
+    "@expo/vector-icons": "^10.2.0",
     "@firebase/auth": "^0.14.7",
     "@firebase/database": "^0.6.5",
+    "@firebase/firestore": "^1.15.5",
+    "@react-native-community/art": "^1.2.0",
+    "@react-native-community/netinfo": "^5.9.4",
     "@react-native-firebase/app": "^7.2.1",
     "@react-native-firebase/auth": "^8.0.6",
     "@react-native-firebase/database": "^7.2.2",
     "buffer": "^5.6.0",
     "expo": "^36.0.0",
+    "expo-activity-feed": "^0.9.1",
     "expo-asset": "~8.0.0",
+    "expo-constants": "^9.1.1",
     "expo-facebook": "^8.0.0",
+    "expo-firebase-analytics": "^2.4.1",
+    "expo-image-manipulator": "^8.2.1",
+    "expo-image-picker": "^8.0.2",
     "expo-linear-gradient": "~8.0.0",
+    "expo-permissions": "^9.0.1",
     "expo-random": "^8.1.0",
     "firebase": "^7.15.3",
+    "listjs": "^0.1.1",
     "nanoid": "^3.1.10",
+    "neumorphism-ui": "^1.0.2",
     "react": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
-    "react-native-elements": "^2.0.2",
+    "react-native-elements": "^2.0.4",
     "react-native-fbsdk": "^2.0.0",
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-get-random-values": "^1.4.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-list": "^1.0.1",
+    "react-native-neomorph-shadows": "^1.1.2",
+    "react-native-progress": "^4.1.2",
     "react-native-randombytes": "^3.5.3",
+    "react-native-reanimated": "^1.9.0",
+    "react-native-safe-area-context": "0.6.0",
+    "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^2.0.0-beta.7",
     "react-native-slider": "^0.11.0",
+    "react-native-super-grid": "^4.0.2",
+    "react-native-svg": "^12.1.0",
     "react-native-unique-id": "^2.0.0",
     "react-native-uuid": "^1.4.9",
     "react-native-uuid-generator": "^6.1.1",
     "react-native-vector-icons": "^6.6.0",
-    "react-navigation": "^4.0.10",
+    "react-navigation": "^4.4.0",
+    "react-navigation-header-buttons": "^4.0.2",
     "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.9.0",
     "react-uuid": "^1.0.2",
+    "stream-chat": "^1.12.1",
+    "stream-chat-expo": "^0.12.4",
+    "stream-chat-react-native-core": "^0.12.4",
     "uuid": "^8.1.0",
     "uuidv4": "^6.1.0"
   },
