--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-activity-feed": "^0.9.1",
     "expo-asset": "~8.0.0",
     "expo-constants": "^9.1.1",
+    "expo-data-forms": "^2.1.11",
     "expo-facebook": "^8.0.0",
     "expo-firebase-analytics": "^2.4.1",
     "expo-image-manipulator": "^8.2.1",
@@ -28,20 +29,25 @@
     "expo-linear-gradient": "~8.0.0",
     "expo-permissions": "^9.0.1",
     "expo-random": "^8.1.0",
-    "firebase": "^7.15.3",
+    "firebase": "^7.16.0",
     "listjs": "^0.1.1",
     "nanoid": "^3.1.10",
+    "native-forms": "^1.3.1",
     "neumorphism-ui": "^1.0.2",
     "react": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.1.tar.gz",
     "react-native-elements": "^2.0.4",
     "react-native-fbsdk": "^2.0.0",
     "react-native-firebase": "^5.6.0",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-get-random-values": "^1.4.0",
+    "react-native-image-picker": "^2.3.3",
+    "react-native-image-placeholder": "^1.0.14",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-list": "^1.0.1",
     "react-native-neomorph-shadows": "^1.1.2",
+    "react-native-photo-upload": "^1.3.0",
     "react-native-progress": "^4.1.2",
     "react-native-randombytes": "^3.5.3",
     "react-native-reanimated": "^1.9.0",
@@ -51,6 +57,7 @@
     "react-native-slider": "^0.11.0",
     "react-native-super-grid": "^4.0.2",
     "react-native-svg": "^12.1.0",
+    "react-native-textarea": "^1.0.4",
     "react-native-unique-id": "^2.0.0",
     "react-native-uuid": "^1.4.9",
     "react-native-uuid-generator": "^6.1.1",
@@ -63,6 +70,7 @@
     "stream-chat": "^1.12.1",
     "stream-chat-expo": "^0.12.4",
     "stream-chat-react-native-core": "^0.12.4",
+    "tcomb-form-native": "^0.6.20",
     "uuid": "^8.2.0",
     "uuidv4": "^6.1.0"
   },
